fixed align wide uncentered bug

--- a/theme/scss/site/layout.scss
+++ b/theme/scss/site/layout.scss
@@ -15,7 +15,7 @@ body {
 
 .alignwide {
 	position: relative;
-	right: 0px;
+	right: 2.375em;
 	width: 100vw;
 	max-width: 100vw;
 	clear: both;
@@ -24,8 +24,6 @@ body {
 @include media-breakpoint-up(md) {
 	.alignwide {
 		width: calc( 100% );
-	}
-	.post-content-main .alignwide {
 		right: 0px;
 	}
 }
@@ -33,8 +31,6 @@ body {
 @include media-breakpoint-up(xl) {
 	.alignwide {
 		width: calc( 100% + (2 * 2rem));
-	}
-	.post-content-main .alignwide {
 		right: 2rem;
 	}
 }
@@ -42,15 +38,13 @@ body {
 @include media-breakpoint-up(xxl) {
 	.alignwide {
 		width: calc( 100% + (2 * 3rem));
-	}
-	.post-content-main .alignwide {
 		right: 3rem;
 	}
 }
 
 
 // blog post page cards has differnt settings for align wide and full
-.col-lg-8, .card {
+.card {
 	.alignfull,
 	.alignwide {
 		width: 100%;
